// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RTLToggle checked renders 1`] = `
<span
  class="sc-beqWaB JxkRB"
>
  <label
    class="sc-gueYoa MnWhy"
  >
    <input
      aria-controls="rtl-status"
      checked=""
      class="sc-dmqHEX cKQmMr"
      data-testid="rtl-toggle-input"
      type="checkbox"
    />
    <a
      class="sc-hLseeU cgSywu"
    >
      Enable right-to-left
    </a>
  </label>
  <span
    aria-live="polite"
    class="sc-eDDNvR fnwEbN"
    id="rtl-status"
    role="region"
  >
    Right-to-left
  </span>
</span>
`;

exports[`RTLToggle default renders 1`] = `
<span
  class="sc-beqWaB JxkRB"
>
  <label
    class="sc-gueYoa NAoBb"
  >
    <input
      aria-controls="rtl-status"
      class="sc-dmqHEX cKQmMr"
      data-testid="rtl-toggle-input"
      type="checkbox"
    />
    <a
      class="sc-hLseeU bkAwTu"
    >
      Enable right-to-left
    </a>
  </label>
  <span
    aria-live="polite"
    class="sc-eDDNvR fnwEbN"
    id="rtl-status"
    role="region"
  >
    Left-to-right
  </span>
</span>
`;

exports[`RTLToggle unchecked renders 1`] = `
<span
  class="sc-beqWaB JxkRB"
>
  <label
    class="sc-gueYoa NAoBb"
  >
    <input
      aria-controls="rtl-status"
      class="sc-dmqHEX cKQmMr"
      data-testid="rtl-toggle-input"
      type="checkbox"
    />
    <a
      class="sc-hLseeU bkAwTu"
    >
      Enable right-to-left
    </a>
  </label>
  <span
    aria-live="polite"
    class="sc-eDDNvR fnwEbN"
    id="rtl-status"
    role="region"
  >
    Left-to-right
  </span>
</span>
`;
